--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
 <h1>Github</h1>
+<form>
+    email: <br>
+    <input type="text" placeholder="mon email"> <br>
+    Mot de passe : <br>
+    <input type="password" placeholder="Mon mot de passe"><br>
+    <input type="submit" value="connexion">
+</form>
