--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
     <input type="text" placeholder="mon email"> <br>
     Mot de passe : <br>
     <input type="password" placeholder="Mon mot de passe"><br>
-    <input type="submit" value="connexion">
+    <input type="submit" value="connexion"> save
 </form>
